--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
+	<title>NasuVPN Checker</title>
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
