--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,7 @@
 		href="https://fonts.googleapis.com/css2?family=Material+Icons&Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 		rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/svelte-material-ui/bare.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	%sveltekit.head%
